--- a/front/app/componentes/cadastro/cadastro.component.html
+++ b/front/app/componentes/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-6">
   <h1 class="h1-geral">{{ title }}</h1>
-  <form class="col-lg-10" #cadastroForm="ngForm">
+  <form class="col-lg-10" #cadastroForm="ngForm" (ngSubmit)="onSubmit()" >
     <p>
       <label>Nome</label>
       <input class="form-control" required type="text" name="nome" #nome="ngModel" [(ngModel)]="usuario.nome"/>
